--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Test Web components</title>
@@ -8,7 +9,7 @@
 
     <body>
 
-        <h1>Welcome</h2>
+        <h1>Welcome</h1>
 
         <my-navigation>
             Hello
